--- a/luxe media.css
+++ b/luxe media.css
@@ -59,7 +59,8 @@ div{
     color: red;
 }
 #titre{
-    font-size:120%;
+    font-size:130%;
     text-align:center;
     margin-left:18%;
+    color:red;
 }
