--- a/luxe media.css
+++ b/luxe media.css
@@ -12,7 +12,7 @@ body{
 header{
     position: fixed;
     width: 100%;
-    height: 15%;
+    height: 17%;
     background-color: aliceblue;
 }
 nav{
@@ -63,4 +63,5 @@ div{
     text-align:center;
     margin-left:18%;
     color:red;
+    margin-bottom:2%;
 }
