--- a/luxe media.css
+++ b/luxe media.css
@@ -8,13 +8,12 @@ h2{
 body{
     font-family: serif;
     display: flexbox;
-    margin-left:2%;
 }
 
 header{
     position: fixed;
     width: 100%;
-    height: 17%;
+    height: 20%;
     background-color: aliceblue;
 }
 nav{
@@ -32,8 +31,7 @@ nav li{
     font-size: 200%;
     margin-right: 0px;
     margin-left: 0px;
-    margin-top: 2%;
-   
+    margin-top: 2%;   
 }
 #second{
     color: red;
@@ -43,6 +41,25 @@ nav li{
     margin-left: 70%;
     background-color: white;
     margin-top: 2%;
+}
+#actualite{
+    background-color: white;
+    margin-bottom: 2%;
+    width: 130%;
+    height: 80%;
+    color: navy;
+    font-size: 60%;
+}
+#act{
+    margin-left: 25%;
+}
+#ab{
+    background-color: white;
+    margin-bottom: 2%;
+    width: 130%;
+    height: 80%;
+    color: red;
+    font-size: 60%;
 }
 select{
     border: transparent;
@@ -71,35 +88,20 @@ div{
 #contactform{
     margin-left: 15%;
 }
-
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f4f4f4;
+#div{
+    width: 70%;
+    height: 18%;
+    font-size: 200%;
+    background-color: aliceblue;
+    border: transparent;
+    color: red;
 }
-
-#comments {
-    margin-bottom: 20px;
+#retour{
+    width: 10%;
+    height: 6%;
+    font-size: 150%;
+    color: navy;
+    background-color: rgb(237, 111, 111);
+    position: fixed;
+    border: transparent;
 }
-
-.comment {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #e0e0e0;
-}
-
-textarea {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 10px;
-}
-
-#addCommentBtn {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-}
-
